--- a/jupyter/notebooks/HW.1.ipynb
+++ b/jupyter/notebooks/HW.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f43ae0c9",
+   "id": "fd6023ff",
    "metadata": {},
    "source": [
     "# 과제 1\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2db0d2d6",
+   "id": "b138581a",
    "metadata": {},
    "source": [
     "<img src=\"https://user-images.githubusercontent.com/16532326/140452107-12e7434c-7028-4a49-b395-b661dbaa18ac.jpeg\" width=\"720\"/>\n",
@@ -54,13 +54,13 @@
     "\n",
     "[`input` 함수의 정의 링크입니다.](https://docs.python.org/3/library/functions.html#input)\n",
     "\n",
-    "사용자 입력을 받은 직후 정수로 형변환을 하는 것을 확인할 수 있습니다.\n",
-    "\n",
     "```\n",
     "int(\"220\")\n",
     "```\n",
     "\n",
-    "위와 같은 상태가 될 것이며, 문자열 \"220\" 은 정수형 220 으로 우리가 생각하는 숫자 형태로 변환이 될 것입니다.\n",
+    "사용자 입력을 받은 직후 정수로 형변환을 하는 것을 확인할 수 있습니다.\n",
+    "\n",
+    "`int()` 정수형 변환 함수로 인해 문자열 \"220\" 은 정수형 220 으로 우리가 생각하는 숫자 형태로 변환이 될 것입니다.\n",
     "\n",
     "이후 처리 결과를 `seaLevel` 이라는 변수에 전달하여 seaLevel 은 정수 220 이라는 값을 가지는 변수가 됩니다."
    ]
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9baa62fb",
+   "id": "bf7e671c",
    "metadata": {},
    "source": [
     "<img src=\"https://user-images.githubusercontent.com/16532326/140453124-3299647f-1c80-4da8-aaa9-e0499f536007.jpeg\" width=\"720\"/>\n",
@@ -93,7 +93,7 @@
     "- 고도에 따라 정확한 온도를 계산해야 할 경우\n",
     "- 100m 당 계산을 해야할 경우\n",
     "\n",
-    "2가지 방식으로 나뉠 수 나뉠 수 있습니다.\n",
+    "2가지 방식으로 나뉠 수 있습니다.\n",
     "\n",
     "`입력받은 해발 고도(seaLevel)` / 100m = 실수 \n",
     "\n",
