--- a/jupyter/notebooks/HW.1.ipynb
+++ b/jupyter/notebooks/HW.1.ipynb
@@ -67,12 +67,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "2b9c9dee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "celsius = 24 - int(seaLevel / 100) * 0.6"
+    "celsius = 24 - (int(seaLevel/100)*0.6)"
    ]
   },
   {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "87c9fc3f",
    "metadata": {},
    "outputs": [
@@ -131,6 +131,14 @@
    "source": [
     "print(celsius)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c35cd78",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
