--- a/jupyter/notebooks/HW4.ipynb
+++ b/jupyter/notebooks/HW4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "322c144d",
+   "id": "e81beffe",
    "metadata": {},
    "source": [
     "# 문제 \n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f2fedae",
+   "id": "79bec86d",
    "metadata": {},
    "source": [
     "# 정답"
@@ -25,8 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f1c11374",
+   "execution_count": 1,
+   "id": "2c818a61",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02f3f3de",
+   "id": "9d320d80",
    "metadata": {},
    "source": [
     "n x m = n * m \n",
@@ -72,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ef78b895",
+   "execution_count": 2,
+   "id": "47bbf35a",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cf5a81e",
+   "id": "5467ab1e",
    "metadata": {},
    "source": [
     "f-string 포멧을 이용해서도 동일한 결과를 얻을 수 있습니다.\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ace5046e",
+   "id": "67f5c478",
    "metadata": {},
    "source": [
     "# 번외, 미로찾기"
@@ -121,8 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "175141b3",
+   "execution_count": 3,
+   "id": "77fe4600",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "773d62da",
+   "id": "09867c2b",
    "metadata": {},
    "source": [
     "지도로 사용할 배열 `_map` 을 선언합니다.\n",
@@ -155,8 +155,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "e84f186e",
+   "execution_count": 4,
+   "id": "9bfe1317",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,8 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "f0f996b9",
+   "execution_count": 5,
+   "id": "04ee88a1",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de44f82e",
+   "id": "2ccd5600",
    "metadata": {},
    "source": [
     "이중 반복문으로 지도 정보를 출력하는 함수입니다.\n",
@@ -210,8 +210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "daf83c6b",
+   "execution_count": 6,
+   "id": "9eb0e9ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92461930",
+   "id": "ddb83a9d",
    "metadata": {},
    "source": [
     "findGoal 이름의 함수를 정의하였습니다.\n",
@@ -292,15 +292,15 @@
     "\n",
     "이를 깊이우선탐색 DFS 라고 합니다.\n",
     "\n",
+    "![dfs](https://codeforces.com/predownloaded/8d/be/8dbe5d89e58b67f3d8e4d8e0e8eb3358ba921b28.png)\n",
     "\n",
-    "\n",
-    "대략적으로 그림으로 나타내면 위와 같습니다."
+    "대략적으로 그림으로 나타내면 위와 같이 시뮬레이션 됩니다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "2f9da8db",
+   "execution_count": 7,
+   "id": "a8be668b",
    "metadata": {},
    "outputs": [
     {
@@ -398,14 +398,6 @@
    "source": [
     "findGoal(startX, startY, -1, _map)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b43d707e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
